--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       ############## Version 1 ##############
-      #- name: Run bandit
-      #  uses: shundor/python-bandit-scan@v1.0
-      #  with: 
-      #    path: "."
-      #    exit_zero: true
+      - name: Run bandit
+        uses: shundor/python-bandit-scan@v1.0
+        with: 
+          path: "."
+          exit_zero: true
       #######################################
